--- a/package.json
+++ b/package.json
@@ -1,33 +1,26 @@
 {
-  "name": "sd-0x-block8-project-js-unit-tests",
+  "name": "sd-024-a-project-js-unit-tests",
   "version": "1.0.0",
-  "description": "Project for block 8",
+  "description": "Este repositório do repositório **Unit Tests** da Trybe contém implementaração de testes para funções javascript usando a biblioteca Jest.",
   "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx"
+  "directories": {
+    "test": "tests"
   },
-  "jest": {
-    "rootDir": "./tests/"
+  "scripts": {
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/betrybe/ssd-0x-block8-project-js-unit-test.git"
+    "url": "git+https://github.com/CalebeLAR/trybe_05_unit_tests.git"
   },
-  "keywords": [
-    "javascript",
-    "tests",
-    "assert",
-    "jest"
-  ],
-  "author": "Jean Vasconcelos",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/betrybe/sd-0x-block8-project-js-unit-test/issues"
+    "url": "https://github.com/CalebeLAR/trybe_05_unit_tests/issues"
   },
-  "homepage": "https://github.com/betrybe/sd-0x-block8-project-js-unit-test#readme",
+  "homepage": "https://github.com/CalebeLAR/trybe_05_unit_tests#readme",
   "devDependencies": {
-    "eslint-config-trybe-fundamentals": "1.1.1",
-    "jest": "24.9.0"
+    "jest": "29.7.0"
   }
 }
